[FIX]: Dark mode css class issue fixed

--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -41,8 +41,8 @@
     font-size: 13px;
   }
 
-  .dark-mode {
-    width: 25%;
+  .dark-toggle {
+    width: 30%;
   }
   
 }
